# cfgloader_rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PUBLISHING.md  README.md  READY_FOR_PUBLICATION.md  REFACTOR.md  setup-hooks.sh
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
cfgloader/: Cargo.toml
cfgloader-core/: Cargo.toml
cfgloader-core/src/: lib.rs
cfgloader-derive/: Cargo.toml
cfgloader-derive/src/: lib.rs
cfgloader-macros/: Cargo.toml
cfgloader-macros/src/: lib.rs
cfgloader/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
example/: .env  Cargo.toml  README.md
example/src/: main.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs
