[workspace]
resolver = "2"
members = [
    "core",
    "macros", 
    "cfgloader",
]
exclude = [
    "example"
]

[workspace.package]
version = "0.1.2"
authors = ["j50301m <j50301m@yahoo.com.tw>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/j50301m/cfgloader_rs"


