[package]
name = "cfgloader_rs"
version = "0.1.0"
edition = "2024"
authors = ["j50301m <j50301m@yahoo.com.tw>"]
description = "A simple, powerful, and ergonomic configuration loading library for Rust applications"
keywords = ["config", "environment", "dotenv", "configuration", "env"]
categories = ["config", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/j50301m/cfgloader_rs"
documentation = "https://docs.rs/cfgloader_rs"
readme = "../README.md"
exclude = [
    "tests/*",
    ".gitignore",
]

[features]
default = ["derive"]
derive = ["cfgloader_rs_macros"]

[dependencies]
cfgloader-core = { version = "0.1.0", path = "../core" }

# Optional dependency on the derive macro
cfgloader_rs_macros = { version = "0.1.0", path = "../macros", optional = true }
