[package]
name = "cfgloader-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A simple, powerful, and ergonomic configuration loading library for Rust applications"
keywords = ["config", "environment", "dotenv", "configuration", "env"]
categories = ["config", "development-tools"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cfgloader-rs"
readme = "../README.md"
exclude = [
    "tests/*",
    ".gitignore",
]

[features]
default = ["derive"]
derive = ["cfgloader-rs-macros"]

[dependencies]
cfgloader-rs-core = { version = "0.1.2", path = "../core" }

# Optional dependency on the derive macro
cfgloader-rs-macros = { version = "0.1.2", path = "../macros", optional = true }
