[package]
name = "cfgloader_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A simple, powerful, and ergonomic configuration loading library for Rust applications"
keywords = ["config", "environment", "dotenv", "configuration", "env"]
categories = ["config", "development-tools"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cfgloader_rs"
readme = "../README.md"
exclude = [
    "tests/*",
    ".gitignore",
]

[features]
default = ["derive"]
derive = ["cfgloader_rs_macros"]

[dependencies]
cfgloader-core = {path = "../core" }

# Optional dependency on the derive macro
cfgloader_rs_macros = { version = "1.0.0", path = "../macros", optional = true }
