[package]
name = "cfgloader-rs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core functionality for cfgloader - configuration loading library"
keywords = ["config", "environment", "dotenv", "configuration", "env"]
categories = ["config", "development-tools"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cfgloader-rs-core"
readme = "README.md"

[dependencies]
dotenvy = "0.15"