[package]
name = "cfgloader_rs_macros"
version = "0.1.0"
edition = "2024"
authors = ["j50301m <j50301m@yahoo.com.tw>"]
description = "Procedural macros for cfgloader_rs - configuration loading library"
keywords = ["config", "environment", "dotenv", "configuration", "macro"]
categories = ["config", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/j50301m/cfgloader_rs"
documentation = "https://docs.rs/cfgloader_rs_macros"

[lib]
proc-macro = true

[dependencies]
cfgloader-core = { version = "0.1.0", path = "../core" }
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
