[package]
name = "cfgloader-rs-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for cfgloader_rs - configuration loading library"
keywords = ["config", "environment", "dotenv", "configuration", "macro"]
categories = ["config", "development-tools"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cfgloader-rs-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
cfgloader-rs-core = { version = "0.1.2", path = "../core" }
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
